--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "keywords": [
     "mvc",
-    "backend"
+    "backend",
+    "aws",
+    "amazon s3",
+    "mongodb atlas"
   ],
   "author": "Mohammad Imran",
   "license": "ISC",
@@ -17,7 +20,7 @@
     "ejs": "^2.7.2",
     "express": "^4.17.1",
     "mongodb": "^3.3.4",
-    "multer": "^1.4.2"
+    "aws-sdk": "^2.608.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
